# computationalMathResearch

1task/: README.md  second_derivative.csv
1task/cpp/include/: derivative.hpp
1task/cpp/src/: main.cpp
derivative/: README.md  deviation.csv  first_derivative.csv
derivative/cpp/: CMakeLists.txt
derivative/cpp/src/: derivative.cpp
derivative/python/: plot.py
diff2D/: main.py  method.py
heat/: main.py  method.py
transfer/: main.py  methods.py
